fix(railway): specify Java 25 in .tool-versions for Railpack
Railpack defaults to Java 21, but the project requires Java 25.
Java 21 fails with: Unrecognized option: --sun-misc-unsafe-memory-access=allow

Also fix railway.toml startCommand to pass $PORT to Spring Boot.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>